--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "isometricsass": "^1.0.6"
   }
 }
