--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "classnames": "^2.3.1",
+    "particles.js": "^2.0.0",
+    "pathseg": "^1.2.0",
     "pixi.js": "^6.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "web-vitals": "^1.1.1"
