--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "particles.js": "^2.0.0",
     "pathseg": "^1.2.0",
     "pixi.js": "^6.0.2",
+    "prevent-pull-refresh": "^1.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.4.1",
